test/fail_compilation/fail16011.d
import std.typecons: RefCounted;

struct S
{
    int x;
    RefCounted!S s;
}
